[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "ruff>=0.14.10",
    "tqdm>=4.67.1",
    "ty>=0.0.7",
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.2",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "ty>=0.0.7",
]

# [tool.basedpyright]
#include = ["src"]
#e xtraPaths = ["../agate_utils/src"]
#typeCheckingMode = "strict"
