[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "ruff>=0.14.10",
    "tqdm>=4.67.1",
    "ty>=0.0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["rl/"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "ty>=0.0.7",
]

